--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -4,23 +4,28 @@
     <h1 class="text-center">Contribute</h1>
 
     <section>
-      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">
+        None of this cool stuff can happen if we don't have contributions from employees and shareholders.
+      </h3>
     </section> <!-- mission description -->
 
     <section class="magazine-section">
       <div class="view">
         <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid" alt="placeholder">
         <div class="mask flex-center waves-effect waves-light rgba-black-strong">
-          <h4 class="text-center white-text w-responsive mx-auto">Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit id laborum.</h4>
+          <h4 class="text-center white-text w-responsive mx-auto">
+            <span class="toca-uppercase">Employees: </span>
+            Shareholders have agreed to make contributions which are a multiple of the amount contributed by emplyees.
+        <br><br>
+            Please click on the red button below to authorize an automatic payment (which is a charitable gift) from your paycheck to TOCA Cares.
+          </h4>
         </div>
       </div>
     </section> <!-- mission description -->
 
 
     <div class="text-center mt-5 mb-3">
-      <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Contribute Now<% end %>
+      <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Contribute from My Paycheck<% end %>
     </div> <!-- center for button -->
 
   </div> <!-- container -->
