--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -4,21 +4,19 @@
     <h1 class="text-center">FAQ</h1>
 
     <section class="team-section magazine-section text-center">
-      <p class="dark-color-dark-grey w-responsive mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-        eum porro a pariatur veniam.</p>
-
       <div class="text-center">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg" alt="Sample image">
+        <%= image_tag "silhouette-woman-kicking.jpg", class: "img-fluid px-5", alt: "Woman kicking soccer ball.", style: "width: 100%; max-width: 600px" %>
       </div> <!-- Image Grid column -->
 
     </section>
 
     <section class="my-5"> <!-- Features Section 1 -->
 
+      <% n = 1 %>
+
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -32,7 +30,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -46,7 +44,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -60,13 +58,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q4H">Shareholders will match my contribution and then some?</h5>
           <p class="color-dark-grey mb-0" id ="Q4P">
-            Yes! Shareholders will match your contribution and donate to the community fund. Depending on the year, shareholders may select to match anywhere from 2:1 to 6:1! View __ to see what this year’s match is.
+            Yes! Shareholders will match your contribution and donate to the community fund. Depending on the year, shareholders may select to match anywhere from 2:1 to 6:1!
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -74,7 +72,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -89,7 +87,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -104,7 +102,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -118,13 +116,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-green"></i>
+          <p class="h1 color-toca-green"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q8H">Can I pull money from the fund if I don’t use it?</h5>
           <p class="color-dark-grey mb-0" id ="Q8P">
-            All donations are tax-deductible and made to the community pool. If 6 months pass and you have not used the TOCA Cares fund for hardship, you have the option to donate your personal employee contribution to a charity of your choice or apply for a greater grant amount from the fund if you are personally involved in the charity/event.
+            Nope.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -133,23 +131,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
-        </div> <!-- Grid column -->
-
-        <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q9H">What does it mean to sponsor a charity of my choice?</h5>
-          <p class="color-dark-grey mb-0" id ="Q9P">
-            Because the TOCA Cares fund is a community fund, we want all employees to be involved, regardless of whether or not they have an unexpected hardship. If you have not drawn from the fund in the 6 month period, you will have the option to sponsor a charity of your choice. If personally involved in the charity, you can direct not only your personal employee contribution to the charity but also apply for a larger grant sum. TOCA will also sponsor service club membership fees, fund employee designed events like an inner city soccer tournament, etc. Be creative! See the Charitable Sponsorship page for more information.
-          </p>
-        </div> <!-- Grid column -->
-      </div> <!--Grid row-->
-
-
-
-
-      <div class="row mb-3"> <!-- individual question -->
-        <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -165,7 +147,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -181,7 +163,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -197,7 +179,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -213,7 +195,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -229,7 +211,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -245,7 +227,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -261,7 +243,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -277,7 +259,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-green"></i>
+          <p class="h1 color-toca-green"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -293,7 +275,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -309,7 +291,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -325,7 +307,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -341,7 +323,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -357,7 +339,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -373,7 +355,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <i class="fas fa-question fa-lg color-toca-red"></i>
+          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
