--- a/app/views/hardships/show.html.erb
+++ b/app/views/hardships/show.html.erb
@@ -28,7 +28,7 @@
   </div> <!-- container -->
 
 
-  <% unless current_user.committee %>
+  <% unless current_user.committee && current_user != @hardship.user %>
     <div class="bg-toca-red mb-3 px-5 py-3">
       <div class="container">
         <h2 class="color-white toca-uppercase">Personal Information</h2>
@@ -108,7 +108,7 @@
 
     <div class="container">
 
-      <% unless current_user && current_user.committee %>
+      <% unless current_user && current_user.committee && current_user != @hardship.user %>
         <p class="text-center"><em>This section is visible to the deciding committee members.</em></p>
       <% end %>
 
@@ -127,6 +127,28 @@
   </section> <!-- hardship section -->
 
 
+
+  <% if current_user && @hardship.user && @hardship.status == "Returned for Modifications" %>
+    <section class="my-4 pb-5">
+      <div class="bg-toca-red mb-3 px-5 py-3">
+        <div class="container">
+          <h2 class="color-white toca-uppercase">Requested Modifications</h2>
+        </div> <!-- container -->
+      </div> <!-- red stripe -->
+
+      <div class="container">
+        <% @modifications.each do |m| %>
+          <p><%= m.body %></p>
+        <% end %>
+        <div class="text-center">
+          <%= link_to "Modify My Application Now", edit_hardship_path(@hardship), class: "btn btn-md btn-secondary" %>
+        </div>
+      </div> <!-- container -->
+    </section>
+  <% end %> <!-- committee only for decisions -->
+
+
+
   <% if current_user && current_user.committee && @hardship.status == "Submitted to Committee" && ( @hardship.final_decision == "Not Decided" || @hardship.final_decision == "Modifications Requested" ) %>
     <section class="my4">
       <div class="bg-toca-red mb-3 px-5 py-3">
@@ -135,30 +157,42 @@
         </div> <!-- container -->
       </div> <!-- red stripe -->
 
+      <% if @modifications.count > 0 %>
+        <div class="container py-3">
+          <h3 class="toca-uppercase color-toca-red">Proposed Modifications</h3>
+          <p class="color-dark-grey"><em>
+            Seconding a proposed modification will remove this application from consideration and send it back to the applicant for revision.
+          </em></p>
+            <% @modifications.each do |m| %>
+              <div>
+                <% if m.user_id == current_user.id %>
+                  <%= button_to "Your Own Modification", second_modification_path(m), class: "btn btn-sm mr-3 btn-light" %>
+                <% else %>
+                  <%= button_to "Second This Modification", second_modification_path(m), class: "btn btn-sm mr-3 btn-secondary" %>
+                <% end %>
+                <%= m.body %>
+              </div>
+            <% end %>
+        </div> <!-- container -->
+      <% end %>
+
       <div class="container">
+        <h3 class="toca-uppercase color-toca-red">Other Actions</h3>
         <div class="row justify-content-center">
           <div class="col-sm-4">
-            <%= button_to "Approve Application", approve_hardship_path(@hardship), method: :post, data: { confirm: "Are you sure you want to approve this application?"}, class: "btn btn-light btn-lg mx-2 my-2" %>
+            <%= button_to "Approve Application", approve_hardship_path(@hardship), method: :post, data: { confirm: "Are you sure you want to approve this application?"}, class: "btn btn-secondary btn-lg mx-2 my-2" %>
           </div> <!-- col -->
           <div class="col-sm-4">
-            <button type="button" class="btn btn-light btn-lg mx-2 my-2" data-toggle="modal" data-target="#newModificationModal">
+            <button type="button" class="btn btn-secondary btn-lg mx-2 my-2" data-toggle="modal" data-target="#newModificationModal">
               Suggest Modification
             </button>
           </div> <!-- col -->
           <div class="col-sm-4">
-            <%= button_to "Reject Application", reject_hardship_path(@hardship), method: :post, data: { confirm: "Are you sure you want to reject this application?"}, class: "btn btn-light btn-lg mx-2 my-2" %>
+            <%= button_to "Reject Application", reject_hardship_path(@hardship), method: :post, data: { confirm: "Are you sure you want to reject this application?"}, class: "btn btn-secondary btn-lg mx-2 my-2" %>
           </div> <!-- col -->
         </div> <!-- row -->
       </div> <!-- container -->
 
-      <div class="container pt-4">
-        <h3 class="toca-uppercase color-toca-red">Proposed Modifications</h3>
-        <ul>
-          <% @modifications.each do |m| %>
-            <li><%= m.body %></li>
-          <% end %>
-        </ul>
-      </div> <!-- container -->
 
     </section>
   <% end %> <!-- committee only for decisions -->
@@ -177,7 +211,7 @@
   aria-hidden="true">
 
   <!-- Change class .modal-sm to change the size of the modal -->
-  <div class="modal-dialog modal-fluid" role="document">
+  <div class="modal-dialog modal-lg" role="document">
 
 
     <div class="modal-content">
@@ -203,6 +237,9 @@
 
           <div class="field">
             <%= form.text_area :body, class: "form-control mb-4", placeholder: "What does the applicant need to change in their application?", required: true %>
+
+            <%= form.hidden_field :app_type, value: "hardship" %>
+            <%= form.hidden_field :app_id, value: @hardship.id %>
           </div>
 
 
