--- a/app/views/home/pending.html.erb
+++ b/app/views/home/pending.html.erb
@@ -33,14 +33,17 @@
                     <tr>
                       <td>
                         <% if application.application_type == "scholarship" %>
+                          <% @modifications = Modification.where(app_type: "scholarship", app_id: application.id) %>
                           <%= link_to scholarship_path(application) do %>
                             <%= application.application_type.capitalize %> <%= fixed_digit_number(application.id) %> (<%= application.date %>)
                           <% end %>
                         <% elsif application.application_type == "hardship" %>
+                          <% @modifications = Modification.where(app_type: "hardship", app_id: application.id) %>
                           <%= link_to hardship_path(application) do %>
                             <%= application.application_type.capitalize %> <%= fixed_digit_number(application.id) %> (<%= application.date %>)
                           <% end %>
                         <% elsif application.application_type == "charity" %>
+                          <% @modifications = Modification.where(app_type: "charity", app_id: application.id) %>
                           <%= link_to charity_path(application) do %>
                             <%= application.application_type.capitalize %> <%= fixed_digit_number(application.id) %> (<%= application.date %>)
                           <% end %>
@@ -48,9 +51,10 @@
                       </td>
                       <td><%= number_to_currency(application.requested_amount, unit: "$") %></td>
                       <td>
-                        <%= application.status %>
+                        <strong><%= application.status %></strong>
                         <br>
                         <%= pluralize(application.approvals.count, "Approval") %><br>
+                        <%= pluralize(@modifications.count, "Modification") %><br>
                         <%= pluralize(application.rejections.count, "Rejection") %>
                       </td>
                     </tr>
