--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,17 +38,17 @@
       <div class="row">
         <div class="col-md-4 py-2">
           <%= link_to scholarships_path, class: "btn btn-primary btn-lg btn-block" do %>
-            All Scholarship<br class="d-none d-md-block d-lg-none"> Applications
+            All Scholarship<br> Applications
           <% end %>
         </div> <!-- col -->
         <div class="col-md-4 py-2">
           <%= link_to hardships_path, class: "btn btn-primary btn-lg btn-block" do %>
-            All Hardship<br class="d-none d-md-block d-lg-none"> Applications
+            All Hardship<br> Applications
           <% end %>
         </div> <!-- col -->
         <div class="col-md-4 py-2">
           <%= link_to charities_path, class: "btn btn-primary btn-lg btn-block" do %>
-            All Charity<br class="d-none d-md-block d-lg-none"> Applications
+            All Charity<br> Applications
           <% end %>
         </div> <!-- col -->
       </div> <!-- row -->
